안드로이드 앱 아이콘 변경
4차 완성

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="비만도 계산기"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/shy">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
